--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.43.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-react": "^7.25.3"
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
